Fixed paths in connection with bbc being moved to detectors subdirectory.

--- a/detectors/bbc/CMakeLists.txt
+++ b/detectors/bbc/CMakeLists.txt
@@ -3,12 +3,12 @@
 # The extension is already found.  Any number of sources could be listed here.
 
 set(INCLUDE_DIRECTORIES
-${CMAKE_SOURCE_DIR}/geobase 
-${CMAKE_SOURCE_DIR}/parbase 
-${CMAKE_SOURCE_DIR}/base 
-${CMAKE_SOURCE_DIR}/mcstack 
+${CMAKE_SOURCE_DIR}/geobase
+${CMAKE_SOURCE_DIR}/parbase
+${CMAKE_SOURCE_DIR}/base
+${CMAKE_SOURCE_DIR}/mcstack
 ${CMAKE_SOURCE_DIR}/fairtools
-${CMAKE_SOURCE_DIR}/bbc
+${CMAKE_CURRENT_LIST_DIR}
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
@@ -21,17 +21,17 @@ Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
 )
- 
+
 link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
-MpdBbcGeo.cxx 
-MpdBbcGeoPar.cxx 
-MpdBbc.cxx 
-MpdBbcContFact.cxx 
-MpdBbcHit.cxx 
-MpdBbcHitProducer.cxx 
+MpdBbcGeo.cxx
+MpdBbcGeoPar.cxx
+MpdBbc.cxx
+MpdBbcContFact.cxx
+MpdBbcHit.cxx
+MpdBbcHitProducer.cxx
 MpdBbcPoint.cxx
 )
 
