--- a/detectors/emc/CMakeLists.txt
+++ b/detectors/emc/CMakeLists.txt
@@ -4,14 +4,14 @@
 
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
-  ${CMAKE_SOURCE_DIR}/mcstack
-  ${CMAKE_SOURCE_DIR}/clustering
-  ${CMAKE_SOURCE_DIR}/emc
-  ${CMAKE_SOURCE_DIR}/emc/hitmaker
-  ${CMAKE_SOURCE_DIR}/emc/emcKI
-  ${CMAKE_SOURCE_DIR}/tpc
-  ${CMAKE_SOURCE_DIR}/kalman
-  ${CMAKE_SOURCE_DIR}/mpdbase
+ ${CMAKE_CURRENT_LIST_DIR}
+ ${CMAKE_CURRENT_LIST_DIR}/hitmaker
+ ${CMAKE_CURRENT_LIST_DIR}/emcKI
+ ${CMAKE_SOURCE_DIR}/clustering
+ ${CMAKE_SOURCE_DIR}/mcstack
+ ${CMAKE_SOURCE_DIR}/tpc
+ ${CMAKE_SOURCE_DIR}/kalman
+ ${CMAKE_SOURCE_DIR}/mpdbase
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
