--- a/physics/photons/CMakeLists.txt
+++ b/physics/photons/CMakeLists.txt
@@ -4,7 +4,7 @@ set(INCLUDE_DIRECTORIES
  ${CMAKE_SOURCE_DIR}/mpdpid
  ${CMAKE_SOURCE_DIR}/kalman
  ${CMAKE_SOURCE_DIR}/lhetrack
- ${CMAKE_SOURCE_DIR}/emc/emcKI
+ ${CMAKE_SOURCE_DIR}/detectors/emc/emcKI
  ${CMAKE_SOURCE_DIR}/mcstack
  ${CMAKE_SOURCE_DIR}/physics
  ${CMAKE_SOURCE_DIR}/physics/photons
