Moved etof to the directory detectors

--- a/detectors/etof/CMakeLists.txt
+++ b/detectors/etof/CMakeLists.txt
@@ -4,11 +4,11 @@
 
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_SOURCE_DIR}/mcstack 
+ ${CMAKE_SOURCE_DIR}/mcstack
  ${CMAKE_SOURCE_DIR}/tof
  ${CMAKE_SOURCE_DIR}/kalman
  ${CMAKE_SOURCE_DIR}/lhetrack
- ${CMAKE_SOURCE_DIR}/etof
+ ${CMAKE_CURRENT_LIST_DIR}
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
@@ -21,7 +21,7 @@ set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
  ${FAIRROOT_LIBRARY_DIR}
 )
- 
+
 link_directories(${LINK_DIRECTORIES})
 
 # List of source files
