--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -26,7 +26,7 @@
 /detectors/emc/                          @boiana2012
 
 # MCORD
-/mcord/                        @Wielanek
+/detectors/mcord/                        @Wielanek
 
 # STS  (ITS)
 /sts/                          @vkondrat
