Moved top to the subdirectory detectors

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -32,7 +32,7 @@
 /detectors/sts/                          @vkondrat
 
 # TOF
-/tof/                          @lobastov
+/detectors/tof/                          @lobastov
 
 # ZDC  (FHCAL)
 /zdc/                          @marina 
