--- a/mpddst/CMakeLists.txt
+++ b/mpddst/CMakeLists.txt
@@ -10,7 +10,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/mpdbase
   ${CMAKE_SOURCE_DIR}/mpdfield
   ${CMAKE_SOURCE_DIR}/tpc
-  ${CMAKE_SOURCE_DIR}/tof
+  ${CMAKE_SOURCE_DIR}/detectors/tof
   ${CMAKE_SOURCE_DIR}/detectors/emc/emcKI
   ${CMAKE_SOURCE_DIR}/kalman
   ${CMAKE_SOURCE_DIR}/lhetrack
