--- a/detectors/etof/CMakeLists.txt
+++ b/detectors/etof/CMakeLists.txt
@@ -5,7 +5,7 @@
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
  ${CMAKE_SOURCE_DIR}/mcstack
- ${CMAKE_SOURCE_DIR}/tof
+ ${CMAKE_SOURCE_DIR}/detectors/tof
  ${CMAKE_SOURCE_DIR}/kalman
  ${CMAKE_SOURCE_DIR}/lhetrack
  ${CMAKE_CURRENT_LIST_DIR}
