--- a/detectors/zdc/CMakeLists.txt
+++ b/detectors/zdc/CMakeLists.txt
@@ -4,8 +4,8 @@
 
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_SOURCE_DIR}/mcstack 
- ${CMAKE_SOURCE_DIR}/zdc
+ ${CMAKE_CURRENT_LIST_DIR}
+ ${CMAKE_SOURCE_DIR}/mcstack
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
@@ -18,7 +18,7 @@ set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
  ${FAIRROOT_LIBRARY_DIR}
 )
- 
+
 link_directories(${LINK_DIRECTORIES})
 
 # List of source files
