--- a/mpddst/CMakeLists.txt
+++ b/mpddst/CMakeLists.txt
@@ -15,7 +15,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/kalman
   ${CMAKE_SOURCE_DIR}/lhetrack
   ${CMAKE_SOURCE_DIR}/mpdpid
-  ${CMAKE_SOURCE_DIR}/zdc
+  ${CMAKE_SOURCE_DIR}/detectors/zdc
   ${CMAKE_SOURCE_DIR}/mpddst
   ${CMAKE_SOURCE_DIR}/mpddst/MpdMiniEvent
 )
