Identified legacy files inside directory detectors and moved them to legacy folders. Also added library dependencies - each time I include directory with library in CMakeLists.txt, I add same library as dependency (eventhough ROOT should load dependent libraries automatically).

--- a/detectors/tpc/CMakeLists.txt
+++ b/detectors/tpc/CMakeLists.txt
@@ -3,62 +3,62 @@
 # The extension is already found.  Any number of sources could be listed here.
 
 set(INCLUDE_DIRECTORIES
- ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_CURRENT_LIST_DIR}
- ${CMAKE_SOURCE_DIR}/mpdfield
- ${CMAKE_SOURCE_DIR}/mcstack
- ${CMAKE_SOURCE_DIR}/detectors/tof
- ${CMAKE_SOURCE_DIR}/kalman
- ${CMAKE_SOURCE_DIR}/generators
+  ${BASE_INCLUDE_DIRECTORIES}
+  ${CMAKE_CURRENT_LIST_DIR}
+  ${CMAKE_SOURCE_DIR}/mpdfield
+  ${CMAKE_SOURCE_DIR}/mcstack
+  ${CMAKE_SOURCE_DIR}/detectors/tof
+  ${CMAKE_SOURCE_DIR}/kalman
+  ${CMAKE_SOURCE_DIR}/generators
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
- ${ROOT_INCLUDE_DIR}
+  ${ROOT_INCLUDE_DIR}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
- ${ROOT_LIBRARY_DIR}
- ${FAIRROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
+  ${FAIRROOT_LIBRARY_DIR}
 )
 
 link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
-TaskHelpers.cxx
-TpcContFact.cxx
-TpcDetector.cxx
-TpcGas.cxx
-TpcGeo.cxx
-TpcGeoPar.cxx
-TpcPoint.cxx
-MpdTpcSector.cxx
-TpcTimeBin.cxx
-MpdTpcClusterFinderTask.cxx
-MpdTpcDigit.cxx
-MpdTpcPeak.cxx
-MpdTpcFoundHit.cxx
-MpdTpcClusterFinderQAHistograms.cxx
-MpdParticleIdentification.cxx
-MpdTpcDigitizerTask.cxx
-MpdTpcDigitizerQAHistograms.cxx
-MpdTpc2dCluster.cxx
-MpdTpcHit.cxx
-MpdTpcHitProducer.cxx
-MpdTpcSectorGeo.cxx
-MpdTpcDigitizerAZ.cxx
-MpdTpcDigitizerAZlt.cxx
-MpdTpcClusterFinderAZ.cxx
-MpdTPCpid.cxx
-MpdTpcClusterFinderMlem.cxx
-MpdTpcEDepParams.cxx
+  MpdParticleIdentification.cxx
+  MpdTpc2dCluster.cxx
+  MpdTpcClusterFinderAZ.cxx
+  MpdTpcClusterFinderMlem.cxx
+  MpdTpcClusterFinderQAHistograms.cxx
+  MpdTpcClusterFinderTask.cxx
+  MpdTpcDigit.cxx
+  MpdTpcDigitizerAZ.cxx
+  MpdTpcDigitizerAZlt.cxx
+  MpdTpcDigitizerQAHistograms.cxx
+  MpdTpcDigitizerTask.cxx
+  MpdTpcEDepParams.cxx
+  MpdTpcFoundHit.cxx
+  MpdTpcHit.cxx
+  MpdTpcHitProducer.cxx
+  MpdTpcPeak.cxx
+  MpdTPCpid.cxx
+  MpdTpcSector.cxx
+  MpdTpcSectorGeo.cxx
+  TaskHelpers.cxx
+  TpcContFact.cxx
+  TpcDetector.cxx
+  TpcGas.cxx
+  TpcGeo.cxx
+  TpcGeoPar.cxx
+  TpcPoint.cxx
+  TpcTimeBin.cxx
 )
 
 Set(HEADERS)
 Set(LINKDEF tpcLinkDef.h)
 Set(LIBRARY_NAME tpc)
-Set(DEPENDENCIES Base Tof Gdml)
+Set(DEPENDENCIES Base Gdml MpdField MpdMCStack Tof Kalman MpdGen)
 
 GENERATE_LIBRARY()
