--- a/detectors/bbc/CMakeLists.txt
+++ b/detectors/bbc/CMakeLists.txt
@@ -3,41 +3,37 @@
 # The extension is already found.  Any number of sources could be listed here.
 
 set(INCLUDE_DIRECTORIES
-${CMAKE_SOURCE_DIR}/geobase
-${CMAKE_SOURCE_DIR}/parbase
-${CMAKE_SOURCE_DIR}/base
-${CMAKE_SOURCE_DIR}/mcstack
-${CMAKE_SOURCE_DIR}/fairtools
-${CMAKE_CURRENT_LIST_DIR}
+  ${CMAKE_SOURCE_DIR}/mcstack
+  ${CMAKE_CURRENT_LIST_DIR}
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
- ${ROOT_INCLUDE_DIR}
+  ${ROOT_INCLUDE_DIR}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
+include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
- ${ROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
 )
 
 link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
-MpdBbcGeo.cxx
-MpdBbcGeoPar.cxx
-MpdBbc.cxx
-MpdBbcContFact.cxx
-MpdBbcHit.cxx
-MpdBbcHitProducer.cxx
-MpdBbcPoint.cxx
+  MpdBbc.cxx
+  MpdBbcContFact.cxx
+  MpdBbcGeo.cxx
+  MpdBbcGeoPar.cxx
+  MpdBbcHit.cxx
+  MpdBbcHitProducer.cxx
+  MpdBbcPoint.cxx
 )
 
 Set(HEADERS)
 Set(LINKDEF MpdBbcLinkDef.h)
 Set(LIBRARY_NAME Bbc)
-Set(DEPENDENCIES Core Base)
+Set(DEPENDENCIES Core Base MpdMCStack)
 
 GENERATE_LIBRARY()
