--- a/detectors/sts/CMakeLists.txt
+++ b/detectors/sts/CMakeLists.txt
@@ -3,44 +3,38 @@
 # The extension is already found.  Any number of sources could be listed here.
 
 set(INCLUDE_DIRECTORIES
- ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_SOURCE_DIR}/mcstack
- ${CMAKE_CURRENT_LIST_DIR}
+  ${BASE_INCLUDE_DIRECTORIES}
+  ${CMAKE_CURRENT_LIST_DIR}
+  ${CMAKE_SOURCE_DIR}/mcstack
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
- ${ROOT_INCLUDE_DIR}
+  ${ROOT_INCLUDE_DIR}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
- ${ROOT_LIBRARY_DIR}
- ${FAIRROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
+  ${FAIRROOT_LIBRARY_DIR}
 )
- 
+
 link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
-MpdStsGeo.cxx
-MpdStsGeoPar.cxx
-#MpdSts.cxx
-#MpdStsNew2.cxx
-MpdIts5spd.cxx
-MpdStsContFact.cxx
-#MpdStsHit.cxx
-#MpdStsHitProducer.cxx
-#MpdStsHitProducerV1.cxx
-#MpdStsHitProducerNew2.cxx
-MpdStsPoint.cxx
-MpdItsHitProducer5spd.cxx
-MpdItsHit5spd.cxx
+  MpdIts5spd.cxx
+  MpdItsHit5spd.cxx
+  MpdItsHitProducer5spd.cxx
+  MpdStsContFact.cxx
+  MpdStsGeo.cxx
+  MpdStsGeoPar.cxx
+  MpdStsPoint.cxx
 )
 
 Set(HEADERS)
 Set(LINKDEF MpdStsLinkDef.h)
 Set(LIBRARY_NAME Sts)
-Set(DEPENDENCIES)
+Set(DEPENDENCIES MpdMCStack)
 
 GENERATE_LIBRARY()
