--- a/physics/CMakeLists.txt
+++ b/physics/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(femto/MpdFemtoMaker)
 add_subdirectory(femto/MpdFemtoMakerUser)
 add_subdirectory(photons)
 add_subdirectory(common)
+add_subdirectory(anaclass)
 
 # Create a library called "MpdPhysics" which includes the source files given in the array.
 # The extension is already found. Any number of sources could be listed here.
