--- a/shield_pack/MpdGeneralGenerator/CMakeLists.txt
+++ b/shield_pack/MpdGeneralGenerator/CMakeLists.txt
@@ -16,30 +16,28 @@ if(PLUTO_FOUND)
 EndIf(PLUTO_FOUND)
 
 include_directories(${INCLUDE_DIRECTORIES})
-Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
+include_directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 Set(LINK_DIRECTORIES
- ${ROOT_LIBRARY_DIR}
- ${FAIRROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
+  ${FAIRROOT_LIBRARY_DIR}
 )
 
 if(PLUTO_FOUND)
   set(LINK_DIRECTORIES ${LINK_DIRECTORIES} ${PLUTO_LIBRARY_DIR})
 EndIf(PLUTO_FOUND)
- 
-Link_Directories(${LINK_DIRECTORIES})
+
+link_directories(${LINK_DIRECTORIES})
 
 set(SRCS
   MpdGeneralGenerator.cxx
 )
 
-set(HEADERS
-  MpdGeneralGenerator.h
-)
+set(HEADERS)
 
-Set(LINKDEF ${PACKAGE}LinkDef.h)
-Set(LIBRARY_NAME ${PACKAGE})
-Set(DEPENDENCIES Core Base)
+set(LINKDEF ${PACKAGE}LinkDef.h)
+set(LIBRARY_NAME ${PACKAGE})
+set(DEPENDENCIES Core Base)
 
 GENERATE_LIBRARY()
 unset(PACKAGE) # not really necessary, it will be overwritten by following CMakeLists.txt
