--- a/mpdbase/CMakeLists.txt
+++ b/mpdbase/CMakeLists.txt
@@ -2,41 +2,51 @@
 # The extension is already found. Any number of sources could be listed here.
 
 set(INCLUDE_DIRECTORIES
- ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_SOURCE_DIR}/mpdbase
+  ${BASE_INCLUDE_DIRECTORIES}
+  ${CMAKE_SOURCE_DIR}/mpdbase
 )
 
-Set(SYSTEM_INCLUDE_DIRECTORIES
- ${ROOT_INCLUDE_DIR}
+set(SYSTEM_INCLUDE_DIRECTORIES
+  ${ROOT_INCLUDE_DIR}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
- ${ROOT_LIBRARY_DIR}
- ${FAIRROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
+  ${FAIRROOT_LIBRARY_DIR}
 )
- 
+
 link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
- MpdHelix.cxx
- MpdTrack.cxx
- MpdVertex.cxx
- MpdEvent.cxx
- MpdCodeTimer.cxx
- MpdGenTrack.cxx
- MpdGenTrackTask.cxx
+  MpdCodeTimer.cxx
+  MpdEvent.cxx
+  MpdGenTrack.cxx
+  MpdGenTrackTask.cxx
+  MpdHelix.cxx
+  MpdTrack.cxx
+  MpdVertex.cxx
 )
 
 if(RULE_CHECKER_FOUND)
   CHECK_RULES("${SRCS}" "${INCLUDE_DIRECTORIES}" MPDBASE_RULES)
 endif(RULE_CHECKER_FOUND)
 
-Set(HEADERS)
-Set(LINKDEF MpdBaseLinkDef.h)
-Set(LIBRARY_NAME MpdBase)
-Set(DEPENDENCIES )
+set(HEADERS
+  MpdBase.h
+  MpdCodeTimer.h
+  MpdEvent.h
+  MpdGenTrack.h
+  MpdGenTrackTask.h
+  MpdHelix.h
+  MpdTrack.h
+  MpdVertex.h
+)
+
+set(LINKDEF MpdBaseLinkDef.h)
+set(LIBRARY_NAME MpdBase)
+set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
