--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -47,7 +47,7 @@
 
 # Analysis
 #----------------------------------------------------------------------------------
-
+/mpddst/MpdMiniEvent/          @gnigmat
 
 
 # QA
