Moved mpdbase to core/mpdBase

--- a/core/mpdBase/CMakeLists.txt
+++ b/core/mpdBase/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
-  ${CMAKE_SOURCE_DIR}/mpdbase
+  ${CMAKE_CURRENT_LIST_DIR}
 )
 
 set(SYSTEM_INCLUDE_DIRECTORIES
