--- a/mpddst/CMakeLists.txt
+++ b/mpddst/CMakeLists.txt
@@ -7,7 +7,7 @@ add_subdirectory(MpdMiniEvent)
 set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_SOURCE_DIR}/mcstack
-  ${CMAKE_SOURCE_DIR}/mpdbase
+  ${CMAKE_SOURCE_DIR}/core/mpdBase
   ${CMAKE_SOURCE_DIR}/mpdfield
   ${CMAKE_SOURCE_DIR}/detectors/tpc
   ${CMAKE_SOURCE_DIR}/detectors/tof
