--- a/physics/nicafemto/cuts/CMakeLists.txt
+++ b/physics/nicafemto/cuts/CMakeLists.txt
@@ -19,7 +19,7 @@ ${NICAFEMTO_CUTS}
 ${NICAFEMTO_MPDFORMAT}
 ${NICAFEMTO_MPDHELPERS}
 ${NICAFEMTO_MPDCUTS}
-${CMAKE_SOURCE_DIR}/mpdbase
+${CMAKE_SOURCE_DIR}/core/mpdBase
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
