--- a/physics/nicafemto/format/CMakeLists.txt
+++ b/physics/nicafemto/format/CMakeLists.txt
@@ -6,7 +6,7 @@ Set(INCLUDE_DIRECTORIES
 ${BASE_INCLUDE_DIRECTORIES}
 ${CMAKE_SOURCE_DIR}/detectors/tpc
 ${CMAKE_SOURCE_DIR}/mpddata
-${CMAKE_SOURCE_DIR}/mpdbase
+${CMAKE_SOURCE_DIR}/core/mpdBase
 ${CMAKE_SOURCE_DIR}/mpdpid
 ${CMAKE_SOURCE_DIR}/kalman
 ${CMAKE_SOURCE_DIR}/mcstack
@@ -16,7 +16,6 @@ ${CMAKE_SOURCE_DIR}/base/field
 ${CMAKE_SOURCE_DIR}/base/steer
 ${CMAKE_SOURCE_DIR}/base/sim
 ${CMAKE_SOURCE_DIR}/base/source
-${CMAKE_SOURCE_DIR}/mpdbase
 ${CMAKE_SOURCE_DIR}/mpddst
 ${CMAKE_SOURCE_DIR}/mpddst/mcDst
 ${CMAKE_SOURCE_DIR}/mpddst/MpdMiniEvent
