--- a/mpdpid/CMakeLists.txt
+++ b/mpdpid/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
-  ${CMAKE_SOURCE_DIR}/mpdbase
+  ${CMAKE_SOURCE_DIR}/core/mpdBase
   ${CMAKE_SOURCE_DIR}/mpdpid
 )
 
