--- a/physics/nicafemto/nica_helpers/CMakeLists.txt
+++ b/physics/nicafemto/nica_helpers/CMakeLists.txt
@@ -6,8 +6,7 @@ Set(INCLUDE_DIRECTORIES
 ${BASE_INCLUDE_DIRECTORIES}
 ${CMAKE_SOURCE_FAIRMCSTACK}
 ${CMAKE_SOURCE_DIR}/detectors/tpc
-${CMAKE_SOURCE_DIR}/mpddata
-${CMAKE_SOURCE_DIR}/mpdbase
+${CMAKE_SOURCE_DIR}/core/mpdBase
 ${CMAKE_SOURCE_DIR}/mpdpid
 ${CMAKE_SOURCE_DIR}/kalman
 ${CMAKE_SOURCE_DIR}/lhetrack
@@ -16,7 +15,6 @@ ${CMAKE_SOURCE_DIR}/base/field
 ${CMAKE_SOURCE_DIR}/base/steer
 ${CMAKE_SOURCE_DIR}/base/sim
 ${CMAKE_SOURCE_DIR}/base/source
-${CMAKE_SOURCE_DIR}/mpdbase
 ${CMAKE_SOURCE_DIR}/mpddst
 ${CMAKE_SOURCE_DIR}/mpddst/mcDst
 ${CMAKE_SOURCE_DIR}/mpddst/MpdMiniEvent
