--- a/core/mpdField/CMakeLists.txt
+++ b/core/mpdField/CMakeLists.txt
@@ -3,37 +3,37 @@
 # The extension is already found.  Any number of sources could be listed here.
 
 set(INCLUDE_DIRECTORIES
- ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_SOURCE_DIR}/mpdfield 
+  ${BASE_INCLUDE_DIRECTORIES}
+  ${CMAKE_CURRENT_LIST_DIR}
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
- ${ROOT_INCLUDE_DIR}
+  ${ROOT_INCLUDE_DIR}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
- ${ROOT_LIBRARY_DIR}
- ${FAIRROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
+  ${FAIRROOT_LIBRARY_DIR}
 )
  
 link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
-MpdConstField.cxx       
-MpdFieldContFact.cxx 
-MpdFieldMap.cxx      
-MpdFieldMapData.cxx  
-MpdFieldPar.cxx      
-MpdFieldCreator.cxx  
-MpdRegion.cxx        
-MpdMapPar.cxx        
-MpdMultiFieldPar.cxx 
-MpdConstPar.cxx    
-MpdMultiField.cxx  
-MpdFieldMapSym3.cxx  
+  MpdConstField.cxx
+  MpdFieldContFact.cxx
+  MpdFieldMap.cxx
+  MpdFieldMapData.cxx
+  MpdFieldPar.cxx
+  MpdFieldCreator.cxx
+  MpdRegion.cxx
+  MpdMapPar.cxx
+  MpdMultiFieldPar.cxx
+  MpdConstPar.cxx
+  MpdMultiField.cxx
+  MpdFieldMapSym3.cxx
 )
 
 Set(HEADERS)
