--- a/lhetrack/CMakeLists.txt
+++ b/lhetrack/CMakeLists.txt
@@ -4,7 +4,7 @@ set(INCLUDE_DIRECTORIES
  ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_SOURCE_DIR}/mcstack
   ${CMAKE_SOURCE_DIR}/core/mpdBase
-  ${CMAKE_SOURCE_DIR}/mpdfield 
+  ${CMAKE_SOURCE_DIR}/core/mpdField 
   ${CMAKE_SOURCE_DIR}/detectors/tpc
   ${CMAKE_SOURCE_DIR}/kalman
   ${CMAKE_SOURCE_DIR}/detectors/sts
