--- a/core/mpdPid/CMakeLists.txt
+++ b/core/mpdPid/CMakeLists.txt
@@ -4,8 +4,8 @@
 
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
+  ${CMAKE_CURRENT_LIST_DIR}
   ${CMAKE_SOURCE_DIR}/core/mpdBase
-  ${CMAKE_SOURCE_DIR}/mpdpid
 )
 
 set(SYSTEM_INCLUDE_DIRECTORIES
