--- a/physics/nicafemto/nica_helpers/CMakeLists.txt
+++ b/physics/nicafemto/nica_helpers/CMakeLists.txt
@@ -7,7 +7,7 @@ ${BASE_INCLUDE_DIRECTORIES}
 ${CMAKE_SOURCE_FAIRMCSTACK}
 ${CMAKE_SOURCE_DIR}/detectors/tpc
 ${CMAKE_SOURCE_DIR}/core/mpdBase
-${CMAKE_SOURCE_DIR}/mpdpid
+${CMAKE_SOURCE_DIR}/core/mpdPid
 ${CMAKE_SOURCE_DIR}/kalman
 ${CMAKE_SOURCE_DIR}/lhetrack
 ${CMAKE_SOURCE_DIR}/base/event
