Added Base as a dependency of mpdPid

--- a/core/mpdPid/CMakeLists.txt
+++ b/core/mpdPid/CMakeLists.txt
@@ -36,6 +36,6 @@ set(HEADERS
 
 set(LINKDEF MpdPidLinkDef.h)
 set(LIBRARY_NAME MpdPid)
-set(DEPENDENCIES Hist)
+set(DEPENDENCIES Hist Base)
 
 GENERATE_LIBRARY()
