--- a/eventdisplay/CMakeLists.txt
+++ b/eventdisplay/CMakeLists.txt
@@ -58,14 +58,14 @@ endif (BMNROOT)
 if (MPDROOT)
   Set(INCLUDE_DIRECTORIES
     ${INCLUDE_DIRECTORIES}
-    ${CMAKE_SOURCE_DIR}/mcstack
     ${CMAKE_SOURCE_DIR}/core/mpdBase
-    ${CMAKE_SOURCE_DIR}/mpddst
-    ${CMAKE_SOURCE_DIR}/kalman
-    ${CMAKE_SOURCE_DIR}/lhetrack
     ${CMAKE_SOURCE_DIR}/detectors/emc
     ${CMAKE_SOURCE_DIR}/detectors/tpc
     ${CMAKE_SOURCE_DIR}/detectors/zdc
+    ${CMAKE_SOURCE_DIR}/kalman
+    ${CMAKE_SOURCE_DIR}/lhetrack
+    ${CMAKE_SOURCE_DIR}/mpddst
+    ${CMAKE_SOURCE_DIR}/simulation/mcStack
   )
   Set(SRCS
     ${SRCS}
