--- a/mpddst/CMakeLists.txt
+++ b/mpddst/CMakeLists.txt
@@ -5,40 +5,40 @@ add_subdirectory(mcDst)
 add_subdirectory(MpdMiniEvent)
 
 set(INCLUDE_DIRECTORIES
- ${BASE_INCLUDE_DIRECTORIES}
-  ${CMAKE_SOURCE_DIR}/mcstack
+  ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_SOURCE_DIR}/core/mpdBase
   ${CMAKE_SOURCE_DIR}/core/mpdField
   ${CMAKE_SOURCE_DIR}/core/mpdPid
+  ${CMAKE_SOURCE_DIR}/detectors/emc/emcKI
   ${CMAKE_SOURCE_DIR}/detectors/tpc
   ${CMAKE_SOURCE_DIR}/detectors/tof
-  ${CMAKE_SOURCE_DIR}/detectors/emc/emcKI
+  ${CMAKE_SOURCE_DIR}/detectors/zdc
   ${CMAKE_SOURCE_DIR}/kalman
   ${CMAKE_SOURCE_DIR}/lhetrack
-  ${CMAKE_SOURCE_DIR}/detectors/zdc
   ${CMAKE_SOURCE_DIR}/mpddst
   ${CMAKE_SOURCE_DIR}/mpddst/MpdMiniEvent
+  ${CMAKE_SOURCE_DIR}/simulation/mcStack
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
- ${ROOT_INCLUDE_DIR}
+  ${ROOT_INCLUDE_DIR}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
 Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
- ${ROOT_LIBRARY_DIR}
- ${FAIRROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
+  ${FAIRROOT_LIBRARY_DIR}
 )
 
 link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
- MpdFillDstTask.cxx
- MpdMiniDstFillTask.cxx
- MpdDstCompressTask.cxx
+  MpdFillDstTask.cxx
+  MpdMiniDstFillTask.cxx
+  MpdDstCompressTask.cxx
 )
 
 Set(HEADERS)
