--- a/physics/nicafemto/CMakeLists.txt
+++ b/physics/nicafemto/CMakeLists.txt
@@ -1,7 +1,7 @@
 if("${PROJECT_NAME}" STREQUAL "MPDROOT")
-	set(CMAKE_SOURCE_FAIRMCSTACK "${CMAKE_SOURCE_DIR}/mcstack")
+	set(CMAKE_SOURCE_FAIRMCSTACK "${CMAKE_SOURCE_DIR}/simulation/mcStack")
 else()
-	set(CMAKE_SOURCE_FAIRMCSTACK "${CMAKE_SOURCE_DIR}/examples/common/mcstack")
+	set(CMAKE_SOURCE_FAIRMCSTACK "${CMAKE_SOURCE_DIR}/examples/common/simulation/mcStack")
 endif()
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/external/nicafemto/cmake/modules"  ${CMAKE_MODULE_PATH})
 include(NicaFemto)
