--- a/detectors/tof/CMakeLists.txt
+++ b/detectors/tof/CMakeLists.txt
@@ -5,8 +5,8 @@
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_LIST_DIR}
-  ${CMAKE_SOURCE_DIR}/mcstack
   ${CMAKE_SOURCE_DIR}/kalman
+  ${CMAKE_SOURCE_DIR}/simulation/mcStack
 )
 
 set(SYSTEM_INCLUDE_DIRECTORIES
