--- a/physics/nicafemto/tasks/CMakeLists.txt
+++ b/physics/nicafemto/tasks/CMakeLists.txt
@@ -5,20 +5,19 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 Set(INCLUDE_DIRECTORIES
 ${BASE_INCLUDE_DIRECTORIES}
 ${CMAKE_SOURCE_FAIRMCSTACK}
-${CMAKE_SOURCE_DIR}/detectors/tpc
 ${CMAKE_SOURCE_DIR}/core/mpdBase
 ${CMAKE_SOURCE_DIR}/core/mpdPid
+${CMAKE_SOURCE_DIR}/detectors/tpc
 ${CMAKE_SOURCE_DIR}/kalman
 ${CMAKE_SOURCE_DIR}/lhetrack
 ${CMAKE_SOURCE_DIR}/mpddst
-${CMAKE_SOURCE_DIR}/mpddst/mcDst
 ${CMAKE_SOURCE_DIR}/mpddst/MpdMiniEvent
 ${CMAKE_SOURCE_DIR}/physics/nicafemto/format/minidst
 ${CMAKE_SOURCE_DIR}/physics/nicafemto/format/combined
 ${CMAKE_SOURCE_DIR}/physics/nicafemto/format/minidstV0
 ${CMAKE_SOURCE_DIR}/physics/nicafemto/nica_helpers
-
 ${CMAKE_SOURCE_DIR}/physics/nicafemto/tasks
+${CMAKE_SOURCE_DIR}/simulation/mcDst
 ${CMAKE_SOURCE_DIR}/external/nicafemto/analysis/v0s
 ${NICAFEMTO_FEATURES}
 ${NICAFEMTO_DATA}
