Moved mpddst with subdirectories to core/mpdDst

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -47,7 +47,7 @@
 
 # Analysis
 #----------------------------------------------------------------------------------
-/mpddst/MpdMiniEvent/          @gnigmat
+/core/mpdDst/MpdMiniEvent/          @gnigmat
 
 
 # QA
