--- a/eventdisplay/CMakeLists.txt
+++ b/eventdisplay/CMakeLists.txt
@@ -59,12 +59,12 @@ if (MPDROOT)
   Set(INCLUDE_DIRECTORIES
     ${INCLUDE_DIRECTORIES}
     ${CMAKE_SOURCE_DIR}/core/mpdBase
+    ${CMAKE_SOURCE_DIR}/core/mpdDst
     ${CMAKE_SOURCE_DIR}/detectors/emc
     ${CMAKE_SOURCE_DIR}/detectors/tpc
     ${CMAKE_SOURCE_DIR}/detectors/zdc
     ${CMAKE_SOURCE_DIR}/kalman
     ${CMAKE_SOURCE_DIR}/lhetrack
-    ${CMAKE_SOURCE_DIR}/mpddst
     ${CMAKE_SOURCE_DIR}/simulation/mcStack
   )
   Set(SRCS
